Closed Bug 420198 Opened 17 years ago Closed 17 years ago

Missing PR_TRUE assignment results in performance loss

Categories

(Core :: Widget: Win32, defect, P2)

x86
Windows 98
defect

Tracking

()

RESOLVED FIXED
mozilla1.9beta4

People

(Reporter: scott.turner, Assigned: reed)

References

Details

(Keywords: perf, regression)

Attachments

(1 file)

User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_5_2; en-us) AppleWebKit/525.9 (KHTML, like Gecko) Version/3.1 Safari/525.9 Build Identifier: HEAD In widget/src/windows/nsWindow.cpp there is a missing PR_TRUE assignment to didCheck in method GetWindowsVersion... PRInt32 GetWindowsVersion() { static PRInt32 version = 0; static PRBool didCheck = PR_FALSE; if (!didCheck) { OSVERSIONINFOEX osInfo; osInfo.dwOSVersionInfoSize = sizeof(OSVERSIONINFOEX); // This cast is safe and supposed to be here, don't worry ::GetVersionEx((OSVERSIONINFO*)&osInfo); version = (osInfo.dwMajorVersion & 0xff) << 8 | (osInfo.dwMinorVersion & 0xf f); } return version; } Reproducible: Always Steps to Reproduce: 1. 2. 3.
Status: UNCONFIRMED → NEW
Component: OS Integration → Widget: Win32
Ever confirmed: true
Product: Firefox → Core
QA Contact: os.integration → win32
Version: unspecified → Trunk
Attached patch patch - v1Splinter Review
Great catch!
Assignee: nobody → reed
Status: NEW → ASSIGNED
Attachment #306397 - Flags: superreview?(roc)
Attachment #306397 - Flags: review?(roc)
Flags: blocking1.9?
Keywords: perf
Attachment #306397 - Flags: superreview?(roc)
Attachment #306397 - Flags: superreview+
Attachment #306397 - Flags: review?(roc)
Attachment #306397 - Flags: review+
Comment on attachment 306397 [details] [diff] [review] patch - v1 caching ftw!
Attachment #306397 - Flags: approval1.9b4?
Attachment #306397 - Flags: approval1.9?
Comment on attachment 306397 [details] [diff] [review] patch - v1 a1.9b4=beltzner
Attachment #306397 - Flags: approval1.9b4?
Attachment #306397 - Flags: approval1.9b4+
Attachment #306397 - Flags: approval1.9?
Attachment #306397 - Flags: approval1.9+
Keywords: checkin-needed
Bug 355789 caused this regression.
Blocks: 355789
Keywords: regression
Flags: blocking1.9? → blocking1.9+
Priority: -- → P2
Checking in widget/src/windows/nsWindow.cpp; /cvsroot/mozilla/widget/src/windows/nsWindow.cpp,v <-- nsWindow.cpp new revision: 3.728; previous revision: 3.727 done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9beta4
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: