Bug 420198 - "Missing PR_TRUE assignment results in performance loss" [p=reed r+sr=roc a1.9b4=beltzner a=blocking1.9+]